<resources>
    <string name="app_name">TrainAut</string>
    <string-array name="language_list">
        <item>Русский</item>
        <item>English</item>
        <item>Қазақша</item>
        <item>中文</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="default_web_client_id">714834459984-6k2es6r5i34l0ot5m2ur5gcepfagqtvp.apps.googleusercontent.com.apps.googleusercontent.com</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="passwords_match">Пароли совпадают</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="user_not_defined">Не удалось определить пользователя</string>
    <string name="child_not_defined">Не удалось определить ребенка</string>
    <string name="user_not_authenticated">Пользователь не авторизован</string>
    <string name="update_child_data_error">Ошибка обновления ребенка: %s</string>
    <string name="child_data_updated">Данные ребенка обновлены</string>
    <string name="reauthentication_error">Ошибка реаутентификации: %s</string>
    <string name="password_update_error">Не удалось обновить пароль: %s</string>
    <string name="reload_child_data_error">Ошибка загрузки данных ребенка: %1$s</string>
    <string name="user_name">Имя Фамилия: %1$s</string>
    <string name="user_email">Почта: %1$s</string>
    <string name="user_city">Город: %1$s</string>
    <string name="user_phone">Телефон: %1$s</string>
    <string name="user_birth_date">Дата рождения: %1$s</string>
    <string name="child_gender_diagnosis">Пол: %1$s • Диагноз: %2$s</string>
    <string name="child_height_weight">Рост: %1$.1f • Вес: %2$.1f</string>
    <string name="user_logged_out">Вы вышли из аккаунта</string>
    <string name="incorrect_password">Неправильный пароль</string>
    <string name="account_deleted">Аккаунт удален</string>
    <string name="delete_account_error">Ошибка удаления аккаунта: %1$s</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="error_user_or_child_not_found">Не удалось определить пользователя или ребенка</string>
    <string name="error_loading_notes">Ошибка загрузки заметок: %1$s</string>
    <string name="note_saved_successfully">Заметка успешно сохранена</string>
    <string name="error_saving_note">Ошибка сохранения заметки: %1$s</string>
    <string name="note_deleted">Заметка удалена</string>
    <string name="error_deleting_note">Ошибка удаления заметки: %1$s</string>
    <string name="greeting">Привет, %1$s</string>
    <string name="error_user_not_authenticated">Ошибка: пользователь не авторизован.</string>
    <string name="error_loading_exercises">Не удалось загрузить упражнения.</string>
    <string name="no_exercises_today">На сегодня занятий нету.</string>
    <string name="no_title">Нет заголовка</string>
    <string name="no_description">Нет описания</string>
    <string name="error_loading_news">Ошибка загрузки</string>
    <string name="user_not_found">Пользователь не найден.</string>
    <string name="progress_load_failed">Не удалось загрузить прогресс: %1$s</string>
    <string name="progress_parse_failed">Не удалось разобрать прогресс: %1$s</string>
    <string name="completed_days_load_failed">Не удалось загрузить завершенные дни: %1$s</string>
    <string name="progress_save_failed">Ошибка при сохранении прогресса: %1$s</string>
    <string name="progress_save_success">Прогресс успешно сохранен.</string>
    <string name="daily_training_completed">Сегодняшняя тренировка завершена!</string>
    <string name="level_text">Уровень: %1$d</string>
    <string name="experience_text">%1$d / %2$d опыта</string>
    <string name="exercises_process_failed">Ошибка обработки завершенных упражнений: %1$s</string>
    <string name="day_plan_load_failed">Ошибка загрузки дневного плана: %1$s</string>
    <string name="exercise_save_failed">Ошибка сохранения завершенных упражнений: %1$s</string>
    <string name="exercise_save_success">Завершенные упражнения успешно сохранены.</string>
    <string name="gross_motor_training">Крупная моторика</string>
    <string name="fine_motor_training">Мелкая моторика</string>
    <string name="no_gross_motor_plan">Сегодня нет тренировки на крупную моторику</string>
    <string name="no_fine_motor_plan">Сегодня нет тренировки на мелкую моторику</string>
    <string name="training_today">Сегодня тренировка на: \n</string>
    <string name="no_training_plan">Сегодня нет доступного плана тренировок</string>
    <string name="start_training">Начать тренировку</string>
    <string name="training_load_error">Ошибка загрузки плана: %1$s</string>
    <string name="plan_not_available">План на сегодня отсутствует.</string>
    <string name="reward_description">Ты заслужил награду! 🎉 Теперь у тебя +%d Exp. Продолжай в том же духе!</string>
    <string name="return_to_training_dashboard">Вернуться к тренировкам</string>
    <string name="skip">Пропустить</string>
    <string name="error_no_arguments">Ошибка: аргументы не переданы.</string>
    <string name="no_exercises_for_day">Нет упражнений для данного дня.</string>
    <string name="exercise_not_found">Упражнение не найдено.</string>
    <string name="exercise_rest_time">Время отдыха между подходами %.0f минуты</string>
    <string name="exercise_reward_points">За выполнение этого упражнения вы получите +%d EXP</string>
    <string name="day_exercise_points">За выполнение всех упражнений вы получите +%d Exp</string>
    <string name="bonus_exercise_points">За выполнение этого бонусного упражнения вы получите +%d Exp</string>
    <string name="complete_exercise">Завершить упражнение</string>
    <string name="resume">Продолжить</string>
    <string name="pause">Пауза</string>
    <string name="warmup_recommendations">Поддерживайте друг друга, чтобы создать дружескую атмосферу и следите за их техникой, чтобы избежать травм.\n\nОбъясняйте ребенку каждое движение.\n\nВыполняйте упражнения в спокойном темпе, делая акцент на правильную технику.\n\nРебенок всегда должен дышать ровно и не спешить.\n\nВсегда подстраивайте нагрузку под возможности ребёнка.\n\nВключайте разминку перед началом тренировки: несколько легких упражнений для разогрева мышц</string>
    <string name="start_exercise">Начать упражнение</string>
    <string name="recommendation_text">Объясняйте ребенку каждое движение.\n\n</string>
    <string name="reps_with_duration">по %d %s</string>
    <string name="reps_single">по %d раз</string>
    <string name="reps_few">по %d раза</string>
    <string name="sets_single">" подход"</string>
    <string name="sets_multiple">" подхода"</string>
    <string name="default_recommendation_text">Поддерживайте друг друга, чтобы создать дружескую атмосферу и следите за их техникой, чтобы избежать травм.\n\nОбъясняйте ребенку каждое движение.\n\nВыполняйте упражнения в спокойном темпе, делая акцент на правильную технику.\n\nРебенок всегда должен дышать ровно и не спешить.\n\nВсегда подстраивайте нагрузку под возможности ребёнка.\n\nВключайте разминку перед началом тренировки: несколько легких упражнений для разогрева мышц</string>
    <string name="error_no_day_plan">План дня отсутствует.</string>
    <string name="error_update_exercise_time">Ошибка обновления времени выполнения упражнения.</string>
    <string name="no_daily_plan">Ошибка: План дня отсутствует.</string>
    <string name="no_exersice_for_end">Нет упражнений для завершения.</string>
    <string name="end">Завершить</string>
    <string name="all_exersice_missed">Все упражнения пропущены. Прогресс сброшен.</string>
    <string name="level_title">Уровень: %d</string>
    <string name="experience_progress">%d / %d опыта</string>
    <string name="streak_days">Дней: %d</string>
    <string name="achievement_load_error">Ошибка загрузки достижений</string>
    <string name="avatar_load_error">Ошибка загрузки аватара</string>
    <string name="biceps">Бицепс</string>
    <string name="pectoral_muscles">Грудные мышцы</string>
    <string name="triceps">Трицепс</string>
    <string name="deltoid_muscles">Дельтовидные мышцы</string>
    <string name="press">Пресс</string>
    <string name="upper_back_muscles">Верхняя часть спины</string>
    <string name="quadriceps">Квадрицепсы</string>
    <string name="lower_back_muscles">Нижняя часть спины</string>
    <string name="full_body">Всё тело</string>
    <string name="hand_control">Развитие пальцев и кистей</string>
    <string name="finger_strength">Сила пальцев</string>
    <string name="coordination">Координация и точность</string>
    <string name="sensory_perception">Сенсорные упражнения и тактильное восприятие</string>
    <string name="gender_male">Мужской</string>
    <string name="gender_female">Женский</string>
    <string name="gender_other">Другое</string>
    <string name="btn_go_to_home">На главную</string>
    <string name="instruction_home_page">Главная страница — отправная точка вашего взаимодействия с приложением.</string>
    <string name="instruction_training">Тренировки включают упражнения на моторику и когнитивные навыки.</string>
    <string name="instruction_motor_training">Моторные тренировки: упражнения для мелкой и крупной моторики.\nРазвивают координацию, ловкость и уверенность.</string>
    <string name="instruction_cognitive_training">Когнитивные тренировки развивают память, внимание и навыки коммуникации (AAC).\nПомогают улучшить концентрацию и общение.</string>
    <string name="instruction_profile_page">На странице профиля вы можете управлять личными данными.</string>
    <string name="password_reset_link_sent">Ссылка для сброса пароля отправлена на %1$s</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="enter_email">Пожалуйста, введите свой адрес электронной почты</string>
    <string name="google_sign_in_failed">Ошибка входа через Google: %1$s</string>
    <string name="google_sign_in_successful">Вход через Google выполнен успешно</string>
    <string name="login_successful">Вход успешен</string>
    <string name="login_failed">Ошибка входа: %1$s</string>
    <string name="together_to_progress">Вместе к Прогрессу</string>
    <string name="step_by_step">Шаг за шагом</string>
    <string name="login">Войти</string>
    <string name="register">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="login_label">Логин</string>
    <string name="password_label">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="birth_date">Дата рождения</string>
    <string name="birth_date_hint">ДД.ММ.ГГГГ</string>
    <string name="gender">Пол</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="create_note">Создать заметку</string>
    <string name="note_title_hint">Заголовок</string>
    <string name="note_description_hint">Описание</string>
    <string name="add_button">Добавить</string>
    <string name="cancel_button">Отмена</string>
    <string name="child_full_name">ФИО ребенка</string>
    <string name="enter_child_full_name">Введите ФИО ребенка</string>
    <string name="diagnosis">Диагноз</string>
    <string name="enter_diagnosis">Введите диагноз ребенка</string>
    <string name="height">Рост (см)</string>
    <string name="enter_height">Введите рост ребенка</string>
    <string name="weight">Вес (кг)</string>
    <string name="enter_weight">Введите вес ребенка</string>
    <string name="step_2">Шаг 2</string>
    <string name="congratulations">Поздравляем, ты справился со всеми упражнениями!</string>
    <string name="support_service">Служба поддержки</string>
    <string name="subject">Тема</string>
    <string name="subject_hint">Напишите тему</string>
    <string name="message">Сообщение</string>
    <string name="message_hint">Напишите сообщение</string>
    <string name="send">Отправить</string>
</resources>