<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F3F4F6"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/create_note"
        android:textColor="@color/dark_indigo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_title_note"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_signup"
        android:hint="@string/note_title_hint"
        android:padding="10dp"
        android:textColor="@color/dark_indigo"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/dark_indigo" />

    <EditText
        android:id="@+id/et_long_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edit_text_signup"
        android:hint="@string/note_description_hint"
        android:textColor="@color/dark_indigo"
        android:textColorHint="@color/dark_indigo"
        android:minLines="10"
        android:gravity="top|start"
        android:overScrollMode="ifContentScrolls"
        android:padding="16dp"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn1_login_back"
        android:padding="12dp"
        android:text="@string/add_button"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn1_login_back"
        android:padding="12dp"
        android:text="@string/cancel_button"
        android:textSize="16sp"
        android:textColor="#FFFFFF" />

</LinearLayout>
