<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".training.RewardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">


        <TextView
            android:id="@+id/congratulationsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/dark_indigo"
            android:layout_marginBottom="24dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/rewardImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:lottie_fileName="trophy.json"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/rewardAnimationView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:lottie_fileName="confetti.json"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"/>
        </FrameLayout>


        <TextView
            android:id="@+id/rewardDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reward_description"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/back_violet_encircle"
            android:padding="8dp"
            android:textColor="@color/dark_indigo"
            android:elevation="4dp"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/btnReturnTrainingDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_to_training_dashboard"
            android:background="@drawable/btn1_login_back"
            android:textColor="@color/white"
            android:padding="12dp"/>
    </LinearLayout>
</FrameLayout>
