<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/light_cloud">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/parentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_service"
                    android:textColor="@color/dark_indigo"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:elevation="3dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"
                    android:elevation="4dp"
                    android:background="@drawable/card_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_email"
                            android:drawablePadding="10dp"
                            android:text="@string/subject"
                            android:textColor="@color/dark_indigo"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:padding="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/dark_indigo"
                        android:textColorHint="@color/dark_indigo"
                        android:background="@drawable/edit_text_signup"
                        android:hint="@string/subject_hint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"
                    android:background="@drawable/card_background"
                    android:elevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_email"
                            android:drawablePadding="10dp"
                            android:text="@string/message"
                            android:textColor="@color/dark_indigo"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_message"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:padding="10dp"
                        android:textColor="@color/dark_indigo"
                        android:textColorHint="@color/dark_indigo"
                        android:minLines="10"
                        android:layout_marginBottom="10dp"
                        android:gravity="top|start"
                        android:background="@drawable/edit_text_signup"
                        android:hint="@string/message_hint" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_support"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn1_login_back"
                android:drawableStart="@drawable/bottom_btn3"
                android:paddingStart="10dp"
                android:paddingEnd="25dp"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
